--- a/The Banquet/The Banquet.csproj
+++ b/The Banquet/The Banquet.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tier1.cs" />
+    <Compile Include="Tier2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
